@@ -6264,7 +6264,8 @@ blockquote small {
 .tb-slogan.has-headline.has-desc .headline {
 	margin-bottom: 10px;
 }
-.tb-slogan.text-only {
+.tb-slogan.text-only,
+.tb-slogan.button-below {
 	text-align: center;
 }
 .tb-slogan.button-right .btn {
